--- a/templates/base.twig
+++ b/templates/base.twig
@@ -39,7 +39,7 @@
             {% endblock %}
 
             {% block page_main %}
-            <main role="main">
+            <main>
                 {% embed 'base.flash.twig' %}{% endembed %}
 
                 {# main page content #}
