--- a/templates/denied.twig
+++ b/templates/denied.twig
@@ -4,7 +4,7 @@
 {% set html_id = 'error-page' %}
 
 {# remove nav #}
-{% set showNavigation = false %}
+{% set show_navigation = false %}
 
 {% block page_main %}
     <div class="terminal">
