--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -3,7 +3,7 @@ html {
     @include margin-trailer(2);
 }
 
-[role="main"] {
+main {
     max-width: 60em;
     margin: 0 auto;
     padding: ms(2) ms(-2);
@@ -19,12 +19,21 @@ html {
     }
 
     @include breakpoint($bp-medium) {
-        margin-top: -5em;
+        margin-top: -6em;
     }
 }
 
 main > p {
     max-width: 40em;
+}
+
+nav {
+    background-color: $text-color;
+    box-shadow: 0px 5px 5px tint($grey, 50%);
+
+    @include breakpoint($bp-medium) {
+        padding-bottom: 6em;
+    }
 }
 
 svg {
