Clean up pagination style naming

--- a/sass/components/_pagination.scss
+++ b/sass/components/_pagination.scss
@@ -1,27 +1,30 @@
-.nav--pagination {
+.nav-pagination {
     text-align: center;
     // Remove whitespace caused by inline-block.
     letter-spacing: -0.31em;
     word-spacing: -0.43em;
-}
 
-.nav--pagination > li {
-    padding: 0 msem(-5);
-    letter-spacing: normal;
-    word-spacing: normal;
-}
-
-.nav--pagination__first a:before {
-    content: "« ";
-}
-
-.nav--pagination__last a:after {
-    content: " »";
-}
-
-// Remove display:block inherited from nav
-.nav--pagination {
-    li {
+    > li {
         display: inline-block;
+        padding: 0 msem(-5);
+        letter-spacing: normal;
+        word-spacing: normal;
+    }
+
+    .nav-pagination--first a:before {
+        content: "« ";
+    }
+
+    .nav-pagination--last a:after {
+        content: " »";
+    }
+
+    .nav-pagination--disabled {
+        color: $light-grey;
+    }
+
+    .nav-pagination--pages {
+        padding-right: msem(-1);
+        padding-left: msem(-1);
     }
 }
