--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -1,21 +1,6 @@
 // Forms
 
 // Use an unordered list to mark up your groups of form fields.
-//
-// <ul class="form-fields">
-//     <li>
-//         <label />
-//         <input />
-//     </li>
-//     <li>
-//         <label />
-//         <select />
-//     </li>
-//     <li>
-//         <label />
-//         <input />
-//     </li>
-// </ul>
 .form-fields {
     list-style: none;
     margin: 0;
@@ -27,7 +12,6 @@
 
 
 // Labels
-// The ".label" class can be used to make an element look like a label if an actual label isn't suitable.
 label, .label {
     display: block;
     margin-bottom: 0;
@@ -41,17 +25,6 @@ label, .label {
 }
 
 // Groups of checkboxes and radios.
-//
-// <li>
-//     <ul class="check-list">
-//         <li>
-//             <input /> <label />
-//         </li>
-//         <li>
-//             <input /> <label />
-//         </li>
-//     </ul>
-// </li>
 .check-list {
     @extend .form-fields;
 }
@@ -77,6 +50,12 @@ textarea {
 
 .text-input:disabled, .text-input:read-only {
     background: $light-grey;
+}
+
+.text-input.is-error,
+.select-input.is-error,
+textarea.is-error {
+    box-shadow: inset 0 2px 0 $red, inset 2px 0px 0 $red, inset -2px 0px 0 $red, inset 0px -2px 0 $red;
 }
 
 legend {
